cc-manifests-central/backend/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: happy-api-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: happy-api-svc
  template:
    metadata:
      labels:
        app: happy-api-svc
    spec:
      containers:
        - name: happy-api-svc
          image: syahdaromstudenttelu/happy-api-svc
          ports:
            - containerPort: 55000
          resources:
            limits:
              cpu: 50m
              memory: 75Mi
            requests:
              cpu: 20m
              memory: 25Mi
