cc-manifests-central/backend/api/gw-api.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - api.anbutech.xyz
    port:
      name: http
      number: 80
      protocol: HTTP
