cc-manifests-central/backend/api/vs-api.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-virtualservice
  namespace: istio-system
spec:
  gateways:
  - api-gateway
  hosts:
  - api.anbutech.xyz
  http:
  - route:
    - destination:
        host: happy-api-svc.default.svc.cluster.local
        port:
          number: 55000
